--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,22 @@
 # === Core Settings ===
 DEFAULT_SOURCE_PUBKEY=<hex-pubkey>      # Required: Default perspective
 GRAPH_BINARY_PATH=data/socialGraph.bin  # Social graph file location
-DB_PATH=data/relatr.db                  # SQLite database path
+DATABASE_PATH=data/relatr-v2.db         # SQLite database path for v2
 
 # === Nostr Settings ===
-NOSTR_RELAYS=wss://relay.damus.io,wss://relay.nostr.band
+NOSTR_RELAYS=wss://relay.damus.io,wss://relay.nostr.band,wss://nos.lol,wss://relay.snort.social
 # Comma-separated relay URLs
 
 # === Distance Normalization ===
 DECAY_FACTOR=0.1                        # Alpha in distance formula
-MAX_DISTANCE=1000                       # Unreachable threshold
 
 # === Caching ===
-CACHE_TTL=3600                          # Cache TTL in seconds (1 hour)
-PROFILE_METRICS_TTL=3600                # Profile metrics TTL
-TRUST_SCORES_TTL=3600                   # Trust scores TTL
+CACHE_TTL_SECONDS=3600                  # Cache TTL in seconds (1 hour)
 
 # === Weighting Scheme ===
-WEIGHTING_SCHEME=default                # default|conservative|progressive|balanced
-
-# === Performance ===
-AUTO_SAVE_INTERVAL=300000               # Graph auto-save (5 min, in ms)
-ENABLE_AUTO_SAVE=false                  # Auto-save social graph changes
-
-# === Features ===
-ENABLE_NIP05=true                       # Enable NIP-05 validation
-ENABLE_LIGHTNING=true                   # Enable Lightning address check
-ENABLE_EVENT_KIND_10002=true            # Enable relay list check
-ENABLE_RECIPROCITY=true                 # Enable mutual follow check
+# Individual weights (optional - will use defaults if not specified)
+WEIGHT_DISTANCE=0.5                     # Social distance weight (0-1)
+WEIGHT_NIP05=0.15                       # NIP-05 validation weight (0-1)
+WEIGHT_LIGHTNING=0.1                    # Lightning address weight (0-1)
+WEIGHT_EVENT=0.1                        # Event kind 10002 weight (0-1)
+WEIGHT_RECIPROCITY=0.15                 # Reciprocity weight (0-1)
