feat(mcp): add nostr server transport and fts5 search
This commit integrates the ContextVM SDK to enable Nostr server transport and implements
FTS5-based local profile search. The search functionality now prioritizes local database
search before falling back to Nostr relays, improving performance and reliability.

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ WEIGHT_NIP05=0.15                       # NIP-05 validation weight (0-1)
 WEIGHT_LIGHTNING=0.1                    # Lightning address weight (0-1)
 WEIGHT_EVENT=0.1                        # Event kind 10002 weight (0-1)
 WEIGHT_RECIPROCITY=0.15                 # Reciprocity weight (0-1)
+
+# === CVM Settings ===
+SERVER_SECRET_KEY=<hex-privkey>         # Required: Server secret key
+SERVER_RELAYS=wss://nostr.example.com,wss://relay.com # Comma-separated relay URLs
