refactor: minor details

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # === Core Settings ===
 DEFAULT_SOURCE_PUBKEY=<hex-pubkey>      # Required: Default perspective
 GRAPH_BINARY_PATH=data/socialGraph.bin  # Social graph file location
-DATABASE_PATH=data/relatr.db         # SQLite database path for v2
+DATABASE_PATH=data/relatr.db         # SQLite database path
 
 # === Nostr Settings ===
 NOSTR_RELAYS=wss://relay.damus.io,wss://relay.nostr.band,wss://nos.lol,wss://relay.snort.social
@@ -11,7 +11,7 @@ NOSTR_RELAYS=wss://relay.damus.io,wss://relay.nostr.band,wss://nos.lol,wss://rel
 DECAY_FACTOR=0.1                        # Alpha in distance formula
 
 # === Caching ===
-CACHE_TTL_SECONDS=3600                  # Cache TTL in seconds (1 hour)
+CACHE_TTL_SECONDS=604800                  # Cache TTL in seconds (1 week)
 
 # === Weighting Scheme ===
 # Individual weights (optional - will use defaults if not specified)
