feat: add Docker support and normalize database schema
Add Docker support for easy deployment and containerization. Normalize the profile_metrics database schema to support individual metric storage and querying. Enhance configuration system with Zod validation and new social graph settings. Refactor service layer to improve performance and maintainability.

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,11 @@ DECAY_FACTOR=0.1                        # Alpha in distance formula
 # === Caching ===
 CACHE_TTL_SECONDS=604800                  # Cache TTL in seconds (1 week)
 
+# === Social Graph Settings ===
+NUMBER_OF_HOPS=2                          # Number of hops for social graph traversal (default: 2)
+SYNC_INTERVAL=86400000                    # Sync interval in milliseconds (default: 24 hours)
+CLEANUP_INTERVAL=25200000                 # Cleanup interval in milliseconds (default: 7 hours)
+
 # === Weighting Scheme ===
 # Individual weights (optional - will use defaults if not specified)
 WEIGHT_DISTANCE=0.5                     # Social distance weight (0-1)
