--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "scripts": {
     "mcp": "bun run src/mcp/server.ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "build": "bun build ./index.ts --outdir ./dist --target bun",
+    "compile": "bun build --compile --minify --sourcemap ./index.ts --outfile relatr"
   },
   "devDependencies": {
     "@types/bun": "latest",
@@ -20,6 +22,7 @@
     "@modelcontextprotocol/sdk": "^1.20.1",
     "applesauce-core": "^4.1.0",
     "applesauce-relay": "^4.1.0",
+    "applesauce-sqlite": "^4.1.0",
     "nostr-social-graph": "^1.0.33",
     "nostr-tools": "^2.17.0",
     "zod": "^3.25.76"
