--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,8 +2,8 @@ name: Build and Publish Docker Image
 
 on:
   push:
-    branches: [ "master" ]
-    tags: [ 'v*' ]
+    branches: ["master"]
+    tags: ["v*"]
 
 env:
   REGISTRY: ghcr.io
