--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "relatr",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "module": "index.ts",
   "type": "module",
   "private": true,
@@ -11,6 +11,7 @@
     "compile": "bun build --compile --minify --sourcemap ./index.ts --outfile relatr"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.7",
     "@types/bun": "latest",
     "prettier": "^3.6.2"
   },
