add process-pastry for config ui

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,9 @@ services:
     volumes:
       - ./data:/usr/src/app/data
 
+    ports:
+      - 3000:3000
+
     # Restart policy for production reliability
     restart: unless-stopped
 # Volumes definition (optional, uses bind mount by default)
