--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "bun run process-pastry --cmd \"bun run index.ts\" --env .env --example-env .env.example --port 3000",
+    "start": "bun run index.ts",
     "mcp": "bun run src/mcp/server.ts",
     "format": "prettier --write .",
     "build": "bun build ./index.ts --outdir ./dist --target bun",
@@ -14,19 +14,23 @@
   "devDependencies": {
     "@changesets/cli": "^2.29.7",
     "@types/bun": "latest",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "prettier": "^3.6.2"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@contextvm/sdk": "^0.1.37",
-    "@modelcontextprotocol/sdk": "^1.20.2",
-    "applesauce-core": "^4.1.0",
-    "applesauce-relay": "^4.1.0",
+    "@contextvm/sdk": "^0.1.38",
+    "@modelcontextprotocol/sdk": "^1.21.1",
+    "applesauce-core": "^4.2.0",
+    "applesauce-relay": "^4.2.0",
     "nostr-social-graph": "^1.0.33",
-    "nostr-tools": "^2.17.0",
+    "nostr-tools": "^2.17.2",
     "process-pastry": "https://github.com/hzrd149/process-pastry",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "zod": "^3.25.76"
   }
 }
