--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     // Environment setup & latest features
-    "lib": ["ESNext"],
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "target": "ESNext",
     "module": "ESNext",
     "moduleDetection": "force",
@@ -40,6 +40,6 @@
       "@mcp/*": ["./src/mcp/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "config-ui/**/*"],
   "exclude": ["node_modules", "dist"]
 }
