feat(backend): add validation sync and social graph improvements
- Add periodic validation sync for pubkeys missing validation scores
- Implement discovery queue system for processing contact events
- Add binary graph persistence functionality
- Update configuration with validation sync interval (3 hours default)
- Add sizeByDistance stats to social graph tracking
- Enhance relay configuration with additional relay URLs
- Update build targets and entry points in package.json

This enables background validation processing and improves social graph management through new async processes and persistence capabilities.

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "relatr",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "type": "module",
   "private": true,
   "scripts": {
     "start": "bun run manager.ts",
     "mcp": "bun run src/mcp/server.ts",
     "format": "prettier --write .",
-    "build": "bun build ./index.ts --outdir ./dist --target bun",
-    "compile": "bun build --compile --minify --sourcemap ./src/index.ts --outfile relatr"
+    "build": "bun build ./src/app.ts --outdir ./dist --target bun",
+    "compile": "bun build --compile --minify --sourcemap ./src/app.ts --outfile relatr"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.7",
