--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.29.7",
     "@types/bun": "latest",
-    "@types/react": "^19.2.4",
+    "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "prettier": "^3.6.2"
   },
@@ -22,11 +22,12 @@
   },
   "dependencies": {
     "@contextvm/sdk": "^0.1.38",
+    "@duckdb/node-api": "^1.4.2-r.1",
     "@modelcontextprotocol/sdk": "^1.22.0",
-    "applesauce-core": "^4.2.0",
-    "applesauce-relay": "^4.2.0",
-    "nostr-social-graph": "^1.0.33",
-    "nostr-tools": "^2.17.2",
+    "applesauce-core": "^4.4.2",
+    "applesauce-relay": "^4.4.2",
+    "nostr-social-duck": "^0.1.11",
+    "nostr-tools": "^2.17.3",
     "process-pastry": "https://github.com/hzrd149/process-pastry",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
