feat(ta): add trusted assertions provider feature
Add support for Trusted Assertions (TA) as per NIP-85, allowing Relatr to act as a provider that publishes Kind 30382 events asserting trust ranks (0-100) for subscribers. This feature is operator-controlled via the TA_ENABLED config flag and includes MCP tools for registration and deactivation, database handling for subscribers, and more

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,15 @@ NOSTR_RELAYS=wss://relay.damus.io,wss://relay.nostr.band,wss://relay.snort.socia
 SERVER_RELAYS=wss://relay.contextvm.org
 
 # =============================================================================
+# OPTIONAL FEATURES
+# =============================================================================
+#
+# Enable Trusted Assertions (TA) publishing (NIP-85 kind 30382).
+# When enabled, Relatr can act as a Trusted Assertion provider and expose TA tools.
+# Default: false
+TA_ENABLED=false
+
+# =============================================================================
 # PERFORMANCE TUNING
 # =============================================================================
 
