refactor(ta): rename subscribers to users and enhance caching
- Rename ta_subscribers table to ta and update column names (subscriber_pubkey -> pubkey, updated_at -> computed_at)
- Change terminology from "subscribers" to "users" across codebase
- Add lazy refresh mechanism for inactive TA entries after trust computation
- Implement batch rank updates for improved performance
- Update MCP tool actions from subscribe/unsubscribe to enable/disable
- Convert time-based configs from seconds to hours for better usability

--- a/.env.example
+++ b/.env.example
@@ -72,17 +72,21 @@ DECAY_FACTOR=0.1
 # Default: 1
 NUMBER_OF_HOPS=1
 
-# Cache time-to-live in seconds
-# Default: 604800 (1 week)
-CACHE_TTL_SECONDS=604800
+# Cache time-to-live in hours
+# Default: 168 (1 week)
+CACHE_TTL_HOURS=168
 
-# Sync interval in milliseconds
-# Default: 86400000 (24 hours)
-SYNC_INTERVAL=86400000
+# Sync interval in hours
+# Default: 21
+SYNC_INTERVAL_HOURS=21
 
-# Cleanup interval in milliseconds
-# Default: 25200000 (7 hours)
-CLEANUP_INTERVAL=25200000
+# Cleanup interval in hours
+# Default: 7
+CLEANUP_INTERVAL_HOURS=7
+
+# Validation sync interval in hours
+# Default: 3
+VALIDATION_SYNC_INTERVAL_HOURS=3
 
 # =============================================================================
 # DATA PATHS
