feat(ta): add support for extra relays in TA configuration
Add TA_EXTRA_RELAYS environment variable to allow specifying additional relays
for Trusted Assertions event publishing, alongside user and server relays. This
enhances flexibility in TA event distribution.

--- a/.env.example
+++ b/.env.example
@@ -28,11 +28,21 @@ SERVER_RELAYS=wss://relay.contextvm.org
 # =============================================================================
 # OPTIONAL FEATURES
 # =============================================================================
-#
+
 # Enable Trusted Assertions (TA) publishing (NIP-85 kind 30382).
 # When enabled, Relatr can act as a Trusted Assertion provider and expose TA tools.
 # Default: false
 TA_ENABLED=false
+
+# =============================================================================
+# TA (TRUSTED ASSERTIONS) CONFIGURATION
+# =============================================================================
+
+# Extra relays for TA event publishing (comma-separated)
+# These relays are added to the final list where TA events are published
+# alongside user relays and server relays
+# Default: (empty)
+TA_EXTRA_RELAYS=
 
 # =============================================================================
 # MCP SERVER CONFIGURATION
