--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@contextvm/sdk": "^0.1.46",
     "@duckdb/node-api": "^1.4.2-r.1",
+    "@enspirit/elo": "^0.9.5",
     "applesauce-core": "^4.4.2",
     "applesauce-relay": "^4.4.2",
     "nostr-social-duck": "^0.1.24",
