refactor(capabilities): refactor capabilities system with json-canonicalize
Split graphOps into modular handlers for better maintainability.
Added nostrQuery capability for Nostr event queries.
Enhanced cache key generation using json-canonicalize for deterministic JSON hashing.
Updated tests to remove obsolete cache key tests.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@enspirit/elo": "^0.9.5",
     "applesauce-core": "^4.4.2",
     "applesauce-relay": "^4.4.2",
+    "json-canonicalize": "^2.0.0",
     "nostr-social-duck": "^0.1.24",
     "nostr-tools": "^2.19.4",
     "process-pastry": "https://github.com/hzrd149/process-pastry",
