--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
   "dependencies": {
     "@contextvm/sdk": "^0.2.5",
     "@duckdb/node-api": "^1.4.2-r.1",
+    "@enspirit/elo": "^0.9.5",
+    "@types/luxon": "^3.7.1",
     "applesauce-core": "^5.0.3",
     "applesauce-relay": "^5.0.0",
-    "@enspirit/elo": "^0.9.5",
     "json-canonicalize": "^2.0.0",
     "nostr-social-duck": "^0.1.24",
     "nostr-tools": "^2.19.4",
