feat(plugins): implement v1 plugin program syntax with multi-round chaining
- Replace v0 RELATR blocks with v1 plan/then syntax
- Add host policy limits for rounds and requests
- Implement capability deduplication across plugins
- Update test fixtures to v1 format
- Add comprehensive documentation for v1 spec and migration

BREAKING CHANGE: v0 RELATR block syntax is no longer supported

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,33 @@ SERVER_RELAYS=wss://relay.contextvm.org
 TA_ENABLED=false
 
 # =============================================================================
+# ELO PLUGINS (PORTABLE PLUGINS) CONFIGURATION
+# =============================================================================
+
+# Directory containing portable plugin JSON events
+# Default: ./plugins/elo
+ELO_PLUGINS_DIR=./plugins/elo
+
+# Timeout for a single plugin evaluation (ms)
+# Default: 5000
+ELO_PLUGIN_TIMEOUT_MS=5000
+
+# Timeout for a single capability invocation (ms)
+# Default: 5000
+CAP_TIMEOUT_MS=5000
+
+# Host policy limits
+# These protect the host from pathological plugins.
+# Defaults: 8 / 32 / 128
+ELO_MAX_ROUNDS_PER_PLUGIN=8
+ELO_MAX_REQUESTS_PER_ROUND=32
+ELO_MAX_TOTAL_REQUESTS_PER_PLUGIN=128
+
+# Optional: override plugin weights (JSON map keyed by "<pubkey>:<pluginName>")
+# Example: {"<pubkey>:root_nip05": 0.2, "<pubkey>:activity_notes": 0.1}
+ELO_PLUGIN_WEIGHTS={}
+
+# =============================================================================
 # TA (TRUSTED ASSERTIONS) CONFIGURATION
 # =============================================================================
 
