feat(plugins): implement v1 plugin program format with multi-round chaining
- Replace v0 RELATR blocks with explicit `plan/then` rounds and `do` syntax
- Enforce strict JSON boundary for capability args with clear failure semantics
- Add host policy limits (max rounds, requests per round, total requests)
- Implement failure caching and deduplication across plugins
- Update plugin manifest validation to support caret semver ranges
- Add comprehensive test coverage for v1 semantics and edge cases

BREAKING CHANGE: The plugin program format has changed from v0 to v1. Plugins must be updated to use the new `plan/then` syntax with `do` calls instead of RELATR blocks. The `relatr-version` manifest field now requires a caret semver range (e.g., `^0.1.16`) instead of a simple version string.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mcp": "bun run src/mcp/server.ts",
     "lint": "eslint src/",
     "format": "prettier --write .",
+    "generate:version": "bun run scripts/generate-version.ts",
     "build": "bun build ./src/mcp/server.ts --outdir ./dist --target bun --external \"@duckdb/node-api\" --external \"@duckdb/node-bindings-*\"",
     "compile": "bun build --compile --minify --sourcemap ./src/mcp/server.ts --outfile relatr --external \"@duckdb/node-api\" --external \"@duckdb/node-bindings-*\""
   },
