build(deps): update dependencies and improve type safety
- Update @contextvm/sdk to 0.2.6
- Update @typescript-eslint packages to 8.54.0
- Update react and react-dom to 19.2.4
- Update prettier to 3.8.1
- Update nostr-tools to 2.20.0
- Enable stricter TypeScript compiler options
- Improve type annotations and remove unused imports
- Fix type safety issues in plugin evaluation and capability handling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,9 +23,13 @@
     "noImplicitOverride": true,
 
     // Some stricter flags (disabled by default)
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "pretty": true,
 
     // Path aliases
     "paths": {
